--- a/app/_assets/styles/custom/components/_version-nav.scss
+++ b/app/_assets/styles/custom/components/_version-nav.scss
@@ -2,7 +2,7 @@
 // Version navigation
 // 
 
-$version-nav-padding: 1.563rem 1.563rem 0 1.563rem;
+$version-nav-padding: 1.5rem 1.5rem 0 1.5rem;
 $version-nav-select-color: $color-5;
 $version-nav-select-font: $base-mono-family;
 
